# vid-storage

./: .gitignore  Cargo.toml  diesel.toml  start.sh
frontend/: package-lock.json  package.json
frontend/app/components/: video.tsx
frontend/app/routes/: _index.tsx  upload.tsx  video.$id.tsx
frontend/app/utils/: client-only.tsx
migrations/2024-12-21-130538_video/: down.sql  up.sql
src/: main.rs
src/api/: health.rs  mod.rs  shared.rs  videos.rs
src/config/: app_config.rs
src/db/: mod.rs  models.rs  schema.rs
src/services/: mod.rs  video_processor.rs
