[package]
name = "video"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.7.0"
actix-files = "0.6.6"
actix-multipart = "0.7.2"
actix-web = "4.9.0"
anyhow = "1.0.94"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.15.4"
deadpool = "0.12.1"
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
diesel = { version = "2.2.6", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel-async = { version = "0.5.2", features = ["postgres", "deadpool"] }
dotenv = "0.15.0"
env_logger = "0.11.6"
futures = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.11.0", features = ["serde", "v4"] }
